--- a/Frontend/competitive-connect-four/src/app/game/game.component.css
+++ b/Frontend/competitive-connect-four/src/app/game/game.component.css
@@ -1,8 +1,16 @@
+#board-container {
+    display: flex;
+    justify-content: center;
+    background-color: lightgray;
+}
+
 .place {
     border-width: 1px;
     border-style: solid;
     border-color: black;
     border-radius: 100%;
+    min-width: 100px;
+    min-height: 100px;
 }
 
 .player1 {
@@ -22,4 +30,6 @@
 
 #board {
     background-color: black;
+    min-width: 700px;
+    min-height: 600px;
 }
