implemented the register function, edited the person.service.ts url

--- a/Frontend/competitive-connect-four/src/app/login/login.component.html
+++ b/Frontend/competitive-connect-four/src/app/login/login.component.html
@@ -5,6 +5,7 @@
         <label for="pass"> Password: </label>
         <input id="pass" name="pass" type="password" [(ngModel)]="pass" />
         <button type="button" id="loginBtn" (click)="logIn()">Log In</button>
+        <a href="register">register</a>
     </ng-container>
     <ng-template #loggedIn>
         <span>
