added profile component and changed routing

--- a/Frontend/competitive-connect-four/src/app/login/login.component.html
+++ b/Frontend/competitive-connect-four/src/app/login/login.component.html
@@ -8,7 +8,7 @@
     </ng-container>
     <ng-template #loggedIn>
         <span>
-            <a href="manage">{{ loggedPerson.username }}&nbsp;</a>
+            <a href="profile">{{ loggedPerson.username }}&nbsp;</a>
             <button type="button" id="loginBtn" (click)="logOut()">Log Out</button>
         </span>
     </ng-template>
