--- a/Frontend/competitive-connect-four/src/app/game/game.component.html
+++ b/Frontend/competitive-connect-four/src/app/game/game.component.html
@@ -1,7 +1,8 @@
+<button type="button" (click)="queue()">test queue</button>
 <div id="board-container">
     <div id="game-board">
         <table id="board">
-            <tr *ngFor="let row of board | keyvalue">
+            <tr *ngFor="let row of this.gameService.board | keyvalue">
                 <td *ngFor="let col of row.value | keyvalue" (click)="makeMove(row.key,col.key)">
                     <div *ngIf="col.value == 0" class="place player0">
                         <!-- {{col.value}} --> 
