--- a/Frontend/competitive-connect-four/src/app/login/login.component.html
+++ b/Frontend/competitive-connect-four/src/app/login/login.component.html
@@ -9,7 +9,7 @@
     </ng-container>
     <ng-template #loggedIn>
         <span>
-            <a href="game">{{ loggedPerson.username }}&nbsp;</a>
+            <a href="profile">{{ loggedPerson.username }}&nbsp;</a>
          <!--   <button type="button" id="homeBtn" (click)="goHome()">Home</button>-->
             <button type="button" id="loginBtn" (click)="logOut()">Log Out</button>
         </span>
