--- a/Frontend/competitive-connect-four/src/app/queue/queue.component.html
+++ b/Frontend/competitive-connect-four/src/app/queue/queue.component.html
@@ -1,3 +1,2 @@
-
-    <p>queue works!</p>
-    <button type="button" id="queueBtn"(click)="printPerson()">Queueue</button>
+<button type="button" id="queueBtn"(click)="queue()">Queueue</button>
+<p id="error">{{error}}</p>
