--- a/Frontend/competitive-connect-four/src/app/game/game.component.html
+++ b/Frontend/competitive-connect-four/src/app/game/game.component.html
@@ -1,4 +1,5 @@
-<ng-container *ngIf="!paired; else ingame">
+
+<ng-container *ngIf="!this.gameService.paired; else ingame">
 <button type="button" (click)="dequeue()">Dequeueue</button>
 <button type="button" (click)="queue()">test queue</button>
 <div><h3>In queue</h3></div>
