--- a/Frontend/competitive-connect-four/src/app/game/game.component.html
+++ b/Frontend/competitive-connect-four/src/app/game/game.component.html
@@ -26,7 +26,7 @@
         </div>
     
         <div id="winner-area" *ngIf="this.gameService.winner != null" [style]="'min-width:' + boardWidth + 'px;' + 'min-height:' + boardHeight + 'px;'">
-            <p>winner</p>
+            <h3>{{this.gameService.gametext}}</h3>
             <button type="button" (click)="goHome()">Home</button>
             <button type="button" (click)="playAgain()">Play again</button>
         </div>
