--- a/Frontend/competitive-connect-four/src/app/profile/profile.component.html
+++ b/Frontend/competitive-connect-four/src/app/profile/profile.component.html
@@ -1,10 +1,21 @@
-<div>
+<!-- <div 
+    style="width:170px;
+    height:auto;
+    background:hsl(0, 71%, 58%);
+    color:#FFF;
+    padding:5px 2px;
+    text-align:center;
+    top:0;
+    position:absolute; 
+    right:0;"> -->
+
+ <div>
     <ng-container *ngIf="loggedPerson; else noUser">
         <h3>Username: {{ loggedPerson.username }}</h3>
         <h3>Rank: {{ loggedPerson.rank }}</h3>
-        <h3>ID: {{ loggedPerson.id }}</h3>
         
         <button type="button" id="editProfileBtn" (click)="editPerson=!editPerson">Toggle Edit Profile</button>
+        <!-- <button type="button" id="viewPastGames" (click)="viewGamesHistory=!viewGamesHistory">View Games History</button> -->
     </ng-container>
     <ng-template #noUser>
         You're not logged in.
@@ -22,5 +33,8 @@
         <br>
         <h4>{{ loggedPerson.profilePicFilePath }}</h4>
     </ng-container>
-    
+    <!-- <ng-container *ngIf="viewGamesHistory">
+        <h3>View history for: {{ loggedPerson.username }}</h3>
+       
+    </ng-container> -->
 </div>
