commented out picture functionality

--- a/Frontend/competitive-connect-four/src/app/profile/profile.component.html
+++ b/Frontend/competitive-connect-four/src/app/profile/profile.component.html
@@ -11,6 +11,8 @@
 
  <div>
     <ng-container *ngIf="loggedPerson; else noUser">
+        <!-- <h3>Profile Picture</h3>
+        <img  class="images" src="../Pictures/asdf/asdf.jpeg"/> -->
         <h3>Username: {{ loggedPerson.username }}</h3>
         <h3>Rank: {{ loggedPerson.rank }}</h3>
         
