--- a/Frontend/competitive-connect-four/src/app/register/register.component.html
+++ b/Frontend/competitive-connect-four/src/app/register/register.component.html
@@ -8,9 +8,9 @@
             <label for="pass"> Password: </label>
             <input id="pass" name="pass" type="password" [(ngModel)]="pass" />
             <br>
-            <label for="upload"> Picture: </label>
+            <!-- <label for="upload"> Picture: </label>
             <input #upload id="upload" type="file" enctype="multipart/form-data" accept="Image/*" (change)="attach(upload)"/>
-            <br>
+            <br> -->
             <button type="button" id="registerBtn" (click)="register()">Register</button>
             
 
