--- a/Frontend/competitive-connect-four/src/app/game/game.component.css
+++ b/Frontend/competitive-connect-four/src/app/game/game.component.css
@@ -57,3 +57,11 @@
     min-width: 700px;
     min-height: 700px;
 }
+button {
+    align-items: center;
+    width: auto;
+}
+#qdiv {
+    display: flex;
+    justify-content: center;
+}
