--- a/Frontend/competitive-connect-four/src/app/register/register.component.html
+++ b/Frontend/competitive-connect-four/src/app/register/register.component.html
@@ -2,10 +2,11 @@
     <ng-container *ngIf="!loggedPerson">
 
         <form>
+            <h1>Sign up here!</h1>
             <label for="user">Username: </label>
             <input id="user" name="user" type="text" [(ngModel)]="user" />
             <br>
-            <label for="pass"> Password: </label>
+            <label for="pass"> Password : </label>
             <input id="pass" name="pass" type="password" [(ngModel)]="pass" />
             <br>
             <!-- <label for="upload"> Picture: </label>
