--- a/Frontend/competitive-connect-four/src/app/profile/profile.component.html
+++ b/Frontend/competitive-connect-four/src/app/profile/profile.component.html
@@ -9,20 +9,22 @@
     position:absolute; 
     right:0;"> -->
 
- <div>
+ 
     <ng-container *ngIf="loggedPerson; else noUser">
         <!-- <h3>Profile Picture</h3>
         <img  class="images" src="../Pictures/asdf/asdf.jpeg"/> -->
-        <h3>Username: {{ loggedPerson.username }}</h3>
-        <h3>Rank: {{ loggedPerson.rank }}</h3>
+        <div><h3>Username: {{ loggedPerson.username }}</h3></div>
+        <div><h3>Rank: {{ loggedPerson.rank }}</h3></div>
         
-        <button type="button" id="editProfileBtn" (click)="editPerson=!editPerson">Toggle Edit Profile</button>
+        <div><button type="button" id="editProfileBtn" (click)="editPerson=!editPerson">Toggle Edit Profile</button></div>
         <!-- <button type="button" id="viewPastGames" (click)="viewGamesHistory=!viewGamesHistory">View Games History</button> -->
     </ng-container>
     <ng-template #noUser>
         You're not logged in.
     </ng-template>
     <ng-container *ngIf="editPerson">
+        <div>
+        <section>
         <h3>Edit profile for: {{ loggedPerson.username }}</h3>
         <label for="username">New Username: </label><br>
         <input name="username" type="text" [(ngModel)]="newUsername"><br>
@@ -33,10 +35,10 @@
         <input type="password" [(ngModel)]="newPassword2"><br>
         <button type="button" (click)="updatePassword()">Update Password</button>
         <br>
-        <h4>{{ loggedPerson.profilePicFilePath }}</h4>
+        <h4>{{ loggedPerson.profilePicFilePath }}</h4></section></div>
     </ng-container>
     <!-- <ng-container *ngIf="viewGamesHistory">
         <h3>View history for: {{ loggedPerson.username }}</h3>
        
     </ng-container> -->
-</div>
+
