--- a/Frontend/competitive-connect-four/src/app/queue/queue.component.html
+++ b/Frontend/competitive-connect-four/src/app/queue/queue.component.html
@@ -1,2 +1,4 @@
-<button type="button" id="queueBtn"(click)="queue()">Queueue</button>
-<p id="error">{{error}}</p>
+
+    <div>
+    <button type="button" id="queueBtn"(click)="queue()">Queueue</button>
+    </div> 
