--- a/Frontend/competitive-connect-four/src/app/queue/queue.component.html
+++ b/Frontend/competitive-connect-four/src/app/queue/queue.component.html
@@ -1,2 +1,2 @@
-<button type="button" id="queueBtn"(click)="queue()">Queueue</button>
+<button type="button" id="queueBtn"(click)="queue()">Queue</button>
 <p id="error">{{error}}</p>
