--- a/Frontend/competitive-connect-four/src/app/queue/queue.component.css
+++ b/Frontend/competitive-connect-four/src/app/queue/queue.component.css
@@ -1,9 +1,7 @@
-button {
-    align-items: center;
-    width: auto;
-}
 div {
+    
+    /* display: table-cell; */
+    /* vertical-align: middle; */
     display: flex;
     justify-content: center;
 }
-
