--- a/Frontend/competitive-connect-four/src/app/profile/profile.component.html
+++ b/Frontend/competitive-connect-four/src/app/profile/profile.component.html
@@ -44,13 +44,13 @@
                 <th>Game ID</th>
                 <th>Date Played</th>
                 <th>Time Played</th>
-                <th>Username</th>
+                <th>Winner</th>
          </tr>
           <tr *ngFor="let game of gameHistoryArray">
-                <td> {{ game.id }}</td>
-                <td>{{ game.timestamp.month }} {{ game.timestamp.dayOfMonth }}, {{ game.timestamp.year }}&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                <td>{{ game.timestamp.hour}}:{{game.timestamp.minute}}</td>
-                <td>{{ game.winner.username }}</td>
+                <td style="text-align:center"> {{ game.id }}</td>
+                <td style="text-align:center">{{ game.timestamp.month }} {{ game.timestamp.dayOfMonth }}, {{ game.timestamp.year }}&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td style="text-align:center">{{ game.timestamp.hour}}:{{game.timestamp.minute}}</td>
+                <td style="text-align:center">{{ game.winner.username }}</td>
         </tr>
     </table>
 
