--- a/Frontend/competitive-connect-four/src/app/profile/profile.component.html
+++ b/Frontend/competitive-connect-four/src/app/profile/profile.component.html
@@ -46,7 +46,7 @@
                 <th>Time Played</th>
                 <th>Winner</th>
          </tr>
-          <tr *ngFor="let game of gameHistoryArray">
+          <tr *ngFor="let game of gameHistoryArray" [routerLink]="['history/', game.id]">
                 <td style="text-align:center"> {{ game.id }}</td>
                 <td style="text-align:center">{{ game.timestamp.month }} {{ game.timestamp.dayOfMonth }}, {{ game.timestamp.year }}&nbsp;&nbsp;&nbsp;&nbsp;</td>
                 <td style="text-align:center">{{ game.timestamp.hour}}:{{game.timestamp.minute}}</td>
