--- a/Frontend/competitive-connect-four/src/app/login/login.component.html
+++ b/Frontend/competitive-connect-four/src/app/login/login.component.html
@@ -5,7 +5,7 @@
         <label for="pass"> Password: </label>
         <input id="pass" name="pass" type="password" (keyup.enter)="logIn()" [(ngModel)]="pass" />
         <button type="button" id="loginBtn" (click)="logIn()">Log In</button>
-        <a routerLink="register">register</a>
+        <button type="button" id="registerBtn" routerLink="register">Register</button>
         
     </ng-container>
     <ng-template #loggedIn>
@@ -19,7 +19,7 @@
             <tr>
                 <td>
                 <div>
-                    <a routerLink="profile">{{ loggedPerson.username }}&nbsp;</a>
+                    <button type="button" id="profileBtn" routerLink="profile">{{loggedPerson.username}}</button>
                 </div>
                 </td>
                 <td>
