Included Bootstrap and temprory image as logo

--- a/Frontend/competitive-connect-four/src/app/app.component.html
+++ b/Frontend/competitive-connect-four/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-login (logInEvent)="setLogin()"></app-login>
+<app-login (logInEvent)="setLogin()" class="container-fluid"></app-login>
 <router-outlet></router-outlet>
