--- a/Frontend/competitive-connect-four/src/app/login/login.component.css
+++ b/Frontend/competitive-connect-four/src/app/login/login.component.css
@@ -1,4 +1,4 @@
-button {
+/* button {
     align-items: center;
     width: auto;
 }
@@ -9,7 +9,6 @@ span {
 }
 table {
     width: 100%;
-    /* display: flex; */
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
@@ -36,4 +35,4 @@ div {
     
     display: flex;
     justify-content: center;
-}
+} */
