--- a/Frontend/competitive-connect-four/src/app/login/login.component.html
+++ b/Frontend/competitive-connect-four/src/app/login/login.component.html
@@ -1,38 +1,24 @@
-<div class="row">
-    <div class="col">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
+    <a class="navbar-brand" routerLink="home">
         <img src="assets/img/Logo.jpg" width="48" class="img-fluid">
+        Competitive Connect 4
+    </a>
+
+    <form *ngIf="!this.loggedPerson" class="form-inline">
+        <div *ngIf="this.incorrect" class="text-danger mr-sm-2">Incorrect username or password</div>
+        <input class="form-control mr-sm-2" type="text" placeholder="Username" [(ngModel)]="user"
+            [ngModelOptions]="{standalone: true}">
+        <input class="form-control mr-sm-2" type="password" placeholder="Password" [(ngModel)]="pass"
+            (keyup.enter)="logIn()" [ngModelOptions]="{standalone: true}">
+        <button id="loginBtn" class="btn btn-outline-success my-2 my-sm-0 mr-sm-2" type="button"
+            (click)="logIn()">Login</button>
+        <button id="registerBtn" class="btn btn-outline-info my-2 my-sm-0" type="button"
+            routerLink="register">Register</button>
+    </form>
+
+    <div *ngIf="this.loggedPerson" class="row text-primary">
+        <h4 class="my-2 my-sm-0 mr-sm-2">{{this.loggedPerson.username}}</h4>
+        <button id="profileBtn" type="button" class="btn btn-outline-info my-2 my-sm-0 mr-sm-2" routerLink="profile">Profile</button>
+        <button id="logoutBtn" type="button" class="btn btn-outline-danger my-2 my-sm-0 mr-sm-2" (click)="logOut()">Logout</button>
     </div>
-    <div class="col d-flex justify-content-end">
-        <ng-container *ngIf="!loggedPerson; else loggedIn">
-            <label for="user">Username: </label>
-            <h3>Username:</h3>
-            <input id="user" name="user" type="text" [(ngModel)]="user" />
-            <label for="pass"> Password: </label>
-            <input id="pass" name="pass" type="password" (keyup.enter)="logIn()" [(ngModel)]="pass" />
-            <button type="button" id="loginBtn" (click)="logIn()">Log In</button>
-            <button type="button" id="registerBtn" routerLink="register">Register</button>
-        </ng-container>
-        <ng-template #loggedIn>
-            <table>
-                <tr>
-                    <td>
-                        <div>
-                            <button type="button" id="profileBtn"
-                                routerLink="profile">{{loggedPerson.username}}</button>
-                        </div>
-                    </td>
-                    <td>
-                        <div>
-                            <button type="button" id="homeBtn" (click)="goHome()">Home</button>
-                        </div>
-                    </td>
-                    <td>
-                        <div>
-                            <button type="button" id="loginBtn" (click)="logOut()">Log Out</button>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-        </ng-template>
-    </div>
-</div>
+</nav>
