--- a/Frontend/competitive-connect-four/src/app/queue/queue.component.html
+++ b/Frontend/competitive-connect-four/src/app/queue/queue.component.html
@@ -1,4 +1,4 @@
     <div>
-    <button type="button" id="queueBtn"(click)="queue()">Queueue</button>
+    <button type="button" id="queueBtn"(click)="queue()" class="btn btn-primary btn-lg">Queueue</button>
     <p id="error">{{error}}</p>
     </div>
