html/css/bootstrap cleaned up look

--- a/Frontend/competitive-connect-four/src/app/home/home.component.html
+++ b/Frontend/competitive-connect-four/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <app-queue></app-queue>
 <div class="text-light">
     <h1>Today's Top Players</h1>
-    <table class="table">
+    <table class="table table-light table-striped">
         <thead class="thead-dark">
             <tr>
                 <th>Wins</th>
