Removed old function calls

--- a/Frontend/competitive-connect-four/src/app/login/login.component.html
+++ b/Frontend/competitive-connect-four/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
-    <a class="navbar-brand" routerLink="home" (click)="goHome()">
+    <a class="navbar-brand" routerLink="home">
         <img src="assets/img/Logo.jpg" width="48" class="img-fluid">
         Competitive Connect 4
     </a>
